--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,8 @@
-inherit_from: .rubocop_todo.yml
+AllCops:
+  NewCops: enable
+
+Layout/LineLength:
+  Max: 150
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
