--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -11,14 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: activejob_web_development
+  database: activejob_web_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: activejob_web_test
+  database: activejob_web_testing
 
 production:
   <<: *default
