--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,8 +4,23 @@ AllCops:
 Layout/LineLength:
   Max: 150
 
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
 Style/Documentation:
   Enabled: false
+
+Style/NumericLiterals:
+  Exclude:
+    - 'test/dummy/db/schema.rb'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'test/dummy/db/schema.rb'
+    - 'spec/requests/activejob_web/jobs_controller_spec.rb'
+
+Metrics/MethodLength:
+  Exclude:
+    - 'db/migrate/20231024051840_create_jobs.rb'
+
+#Todo have to check this cop
+Metrics/AbcSize:
+  Exclude:
+    - 'app/controllers/activejob_web/jobs_controller.rb'
