Update custom authentication, readme file and implements rspec in the overcommit

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -13,3 +13,8 @@ PreCommit:
     enabled: true
     command: [ 'brakeman' ]
     on_warn: fail
+
+  RSpec:
+    enabled: true
+    command: [ 'bundle', 'exec', 'rspec' ]
+    on_warn: fail
