--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,4 @@ Metrics/MethodLength:
   Exclude:
     - 'db/migrate/20231024051840_create_jobs.rb'
     - 'test/dummy/db/migrate/20231118052244_create_users.rb'
+    - 'app/controllers/activejob_web/jobs_controller.rb'
